ajustes nas apis
